WICKET-6581 Module wicket-cdi-1.1 migrated to CDI 2 and name changed to wicket-cdi. Solved dependecy problems with weld versions.