@@ -108,7 +108,6 @@
 		<module>testing/wicket-arquillian</module>
 		<module>wicket-native-websocket</module>
 		<module>wicket-bean-validation</module>
-		<module>wicket-cdi-1.1</module>
 		<module>wicket-user-guide</module>
 	</modules>
 	<properties>
@@ -294,12 +293,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
-				<artifactId>wicket-cdi-1.1</artifactId>
-				<version>9.0.0-SNAPSHOT</version>
-				<type>jar</type>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-core</artifactId>
 				<version>9.0.0-SNAPSHOT</version>
 				<type>jar</type>
@@ -418,34 +411,19 @@
 				<type>jar</type>
 			</dependency>
 			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-api</artifactId>
-				<version>3.0.SP4</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-core</artifactId>
-				<version>2.4.7.Final</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-core-impl</artifactId>
-				<version>3.0.5.Final</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-spi</artifactId>
-				<version>3.0.SP4</version>
-			</dependency>
-			<dependency>
 				<groupId>org.jboss.weld.module</groupId>
 				<artifactId>weld-web</artifactId>
 				<version>3.0.4.Final</version>
 			</dependency>
 			<dependency>
-				<groupId>org.jboss.weld.servlet</groupId>
-				<artifactId>weld-servlet</artifactId>
-				<version>2.4.2.SP1</version>
+			    <groupId>org.jboss.weld.se</groupId>
+			    <artifactId>weld-se-core</artifactId>
+			    <version>3.0.4.Final</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.jboss.weld.servlet</groupId>
+			    <artifactId>weld-servlet-core</artifactId>
+			    <version>3.0.4.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.objenesis</groupId>
@@ -578,7 +556,7 @@
 			<dependency>
 				<groupId>org.jglue.cdi-unit</groupId>
 				<artifactId>cdi-unit</artifactId>
-				<version>4.0.2</version>
+				<version>4.1.0</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -1003,7 +981,7 @@
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
-						<argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-modules=ALL-SYSTEM</argLine>
+						
 					</configuration>
 					<dependencies>
 						<dependency>
